[gd_scene load_steps=17 format=3 uid="uid://b348lvmq7jtev"]

[ext_resource type="Script" uid="uid://cqpwcdxbuf1la" path="res://Scenes/obor_nyala.gd" id="1_5dc7c"]
[ext_resource type="Texture2D" uid="uid://c0o84jn0wlynf" path="res://Assets/Tileset/PNG/fire_animation.png" id="3_wbqoi"]
[ext_resource type="AudioStream" uid="uid://bhaxy57sivl8m" path="res://Assets/Audio/torch-on.ogg" id="5_x1xp0"]
[ext_resource type="AudioStream" uid="uid://brjl6r6o4oion" path="res://Assets/Audio/torch-burning.ogg" id="6_i66o6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_edvta"]
atlas = ExtResource("3_wbqoi")
region = Rect2(37, 0, 37, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gl8ki"]
atlas = ExtResource("3_wbqoi")
region = Rect2(37, 48, 37, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_osaon"]
atlas = ExtResource("3_wbqoi")
region = Rect2(37, 96, 37, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_e5ti6"]
atlas = ExtResource("3_wbqoi")
region = Rect2(37, 144, 37, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_k2m5n"]
atlas = ExtResource("3_wbqoi")
region = Rect2(37, 192, 37, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3dnnv"]
atlas = ExtResource("3_wbqoi")
region = Rect2(37, 240, 37, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_5wmu6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_edvta")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gl8ki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_osaon")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e5ti6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k2m5n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3dnnv")
}],
"loop": true,
"name": &"obor_nyala",
"speed": 5.0
}]

[sub_resource type="Shader" id="Shader_wced7"]
code = "shader_type canvas_item;

void vertex() {
	// Called for every vertex the material is visible on.
}

void fragment() {
	// Called for every pixel the material is visible on.
}

//void light() {
//	// Called for every pixel for every light affecting the CanvasItem.
//	// Uncomment to replace the default light processing function with this one.
//}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_edvta"]
shader = SubResource("Shader_wced7")

[sub_resource type="Gradient" id="Gradient_o8lv2"]
offsets = PackedFloat32Array(0, 0.6, 0.7266667)
colors = PackedColorArray(1, 1, 1, 1, 0.13636369, 0.13636369, 0.13636369, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_gl8ki"]
gradient = SubResource("Gradient_o8lv2")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0, 0)

[sub_resource type="CircleShape2D" id="CircleShape2D_k2m5n"]
radius = 22.0

[node name="Obor3" type="Node2D"]
position = Vector2(2, 2)
script = ExtResource("1_5dc7c")

[node name="OborHidup" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -8)
sprite_frames = SubResource("SpriteFrames_5wmu6")
animation = &"obor_nyala"
frame_progress = 0.9676479

[node name="PointLight2D" type="PointLight2D" parent="OborHidup"]
z_index = 3
material = SubResource("ShaderMaterial_edvta")
position = Vector2(-1, -1)
color = Color(0.84866434, 0.64032954, 0.3541621, 1)
energy = 1.72
range_z_min = -1025
shadow_enabled = true
shadow_item_cull_mask = 4
texture = SubResource("GradientTexture2D_gl8ki")
offset = Vector2(0, 4)
texture_scale = 2.73

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-2, -2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_k2m5n")
debug_color = Color(0.53403425, 0.4183036, 0.98430794, 0.41960785)

[node name="SFX_TorchOn" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_x1xp0")
volume_db = 6.058
pitch_scale = 0.7

[node name="SFX_TorchBurning" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_i66o6")
volume_db = 20.194
max_distance = 64.0
parameters/looping = true

[node name="Obor" type="Node2D" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
